force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/Apttus_Billing__ForecastedBillingSchedule__c.object-meta.xml
<CustomObject>
    <label>Forecasted Billing Schedule</label>
    <nameField>
        <displayFormat>FBS- {00000000}</displayFormat>
        <label>Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasted Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>