force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__BillingDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingDayOfMonth__c</fullName>
    <description>The Billing Day of Month that was is use when the Billing Schedule was generated.</description>
    <inlineHelpText>The Billing Day of Month that was is use when the Billing Schedule was generated.</inlineHelpText>
    <label>Billing Day of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>