force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__BillingRule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingRule__c</fullName>
    <description>The Billing Rule specified on the corresponding Order Line Item.</description>
    <inlineHelpText>The Billing Rule specified on the corresponding Order Line Item.</inlineHelpText>
    <label>Billing Rule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Apttus_Billing__BillingRule</valueSetName>
    </valueSet>
</CustomField>