force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__BillToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillToAccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Id of the corresponding Bill to Account.</description>
    <inlineHelpText>Id of the corresponding Bill to Account.</inlineHelpText>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
    <relationshipName>ForecastedBillingSchedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>