force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__ChargeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ChargeType__c</fullName>
    <description>The charge type associated with the Product or Service.</description>
    <inlineHelpText>The charge type associated with the Product or Service.</inlineHelpText>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Apttus_Billing__ChargeType</valueSetName>
    </valueSet>
</CustomField>