force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the associated Product Configuration.</description>
    <inlineHelpText>Id of the associated Product Configuration.</inlineHelpText>
    <label>Product Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
    <relationshipName>ForecastedBillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>