force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Description__c</fullName>
    <description>The Schedule description.</description>
    <inlineHelpText>The Schedule description.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>