force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FeeAmount__c</fullName>
    <description>The fee for the corresponding billing period.</description>
    <inlineHelpText>The fee for the corresponding billing period.</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>