force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__ForecastedBillingSummaryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ForecastedBillingSummaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Id of the Forecasted Billing Summary this Forecasted Billing Schedule contributes to</description>
    <inlineHelpText>The Id of the Forecasted Billing Summary this Forecasted Billing Schedule contributes to</inlineHelpText>
    <label>Forecasted Billing Summary</label>
    <referenceTo>Apttus_Billing__ForecastedBillingSummary__c</referenceTo>
    <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
    <relationshipName>ForecastedBillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>