force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__HideInvoiceDisplay__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__HideInvoiceDisplay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the Schedule will be present of the corresponding Invoice.</description>
    <inlineHelpText>Indicates whether or not the Schedule will be present of the corresponding Invoice.</inlineHelpText>
    <label>Hide Invoice Display</label>
    <type>Checkbox</type>
</CustomField>