force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__InvoicedScheduleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoicedScheduleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Id of the invoiced and superseded Billing Schedule that is the source of the credit.</description>
    <inlineHelpText>The Id of the invoiced and superseded Billing Schedule that is the source of the credit.
Will be null if Schedule pertains to a debit.</inlineHelpText>
    <label>Invoiced Schedule</label>
    <referenceTo>Apttus_Billing__ForecastedBillingSchedule__c</referenceTo>
    <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
    <relationshipName>ForecastedBillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>