force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__IsSuperseded__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__IsSuperseded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will initially be false and gets set to true when the Billing Schedule is superseded when a Cancellation or
Amendment is applied to corresponding Asset Line Item.</description>
    <inlineHelpText>Will initially be false and gets set to true when the Billing Schedule is superseded when a Cancellation or
Amendment is applied to corresponding Asset Line Item.</inlineHelpText>
    <label>Is Superseded</label>
    <type>Checkbox</type>
</CustomField>