force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__LineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the associated Line Item.</description>
    <inlineHelpText>Id of the associated Line Item.</inlineHelpText>
    <label>Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
    <relationshipName>ForecastedBillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>