force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__LocationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the corresponding Account Location.</description>
    <inlineHelpText>Id of the corresponding Account Location. Can be null.</inlineHelpText>
    <label>Location Id</label>
    <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
    <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
    <relationshipName>ForecastedBillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>