force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PeriodEndDate__c</fullName>
    <description>The billing period end date.</description>
    <inlineHelpText>The billing period end date.</inlineHelpText>
    <label>Period End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>