force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__PriceType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PriceType__c</fullName>
    <description>The price type of the Product of Service.</description>
    <inlineHelpText>The price type of the Product of Service.</inlineHelpText>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Apttus_Billing__PriceType</valueSetName>
    </valueSet>
</CustomField>