force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__ProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the associated Quote/Proposal.</description>
    <inlineHelpText>Id of the associated Quote/Proposal.</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
    <relationshipName>ForecastedBillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>