force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__ReadyForInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReadyForInvoiceDate__c</fullName>
    <description>The date when the corresponding Order is ready for generating an Invoice.</description>
    <inlineHelpText>The date when the corresponding Order is ready for generating an Invoice.</inlineHelpText>
    <label>Ready For Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>