force-app/main/default/objects/Apttus_Billing__ForecastedBillingSchedule__c/fields/Apttus_Billing__ShipToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ShipToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the ship-to Account.</description>
    <inlineHelpText>Id of the ship-to Account.</inlineHelpText>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecasted Billing Schedules (Ship To)</relationshipLabel>
    <relationshipName>Forecasted_Billing_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>